summative.moria.Moria.scala.error
Compilation error:
Moria:31: error: not found: value getColor
    if (getColor!=Color.GREEN)
        ^Moria:41: error: not found: value getColor
  if (getColor!=Color.GREEN)
      ^