summative.moria.Moria.scala.code
def proche() : Boolean =
{
  if (estDosMur() && !estSurBiscuit() && getX()!=0)
  {
    return true
  }
  else 
  {
    return false  
  }
}

def deplacement() 
{


  while (!estSurBiscuit())
  {
    if (estDosMur())
    {
      gauche();avance();gauche();avance();avance()
    }


    recule()

  }
  prendBiscuit()
  while (!estSurBiscuit())
  {
    if (getColor!=Color.GREEN)
    {



      avance()
    }

  }

  if (getColor!=Color.GREEN)
  {

    recule()
    poseBiscuit()
    recule()
  }



}



while (!proche())
{
  deplacement()
}

